Update Power of Compounding.html

--- a/Pages/Power of Compounding.html
+++ b/Pages/Power of Compounding.html
@@ -67,7 +67,7 @@
     of the Compound Effect is in its simplicity.</p>
 
   </div>
-  <button class="btn btn-warning" onclick="history.go(-1)" style="margin: 1%;">
+  <button class="btn btn-success" onclick="history.go(-1)" style="margin: 1%;">
     << Previous</button>
 </body>
 </html>
